--- a/home.html
+++ b/home.html
@@ -206,9 +206,14 @@
 </style>
 </head>
 
-<body style="overflow:hidden">
+<body style="overflow:hidden" >
+	<script>	 
+	  $(function() {
+		$( ".audiolove" );
+	  });	 
+	 </script>
 
-	<div class="container" style="padding-top: 50px">
+	<div class="container" style="padding-top: 50px" class="audiolove">
 
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 
