--- a/home.html
+++ b/home.html
@@ -260,7 +260,7 @@
 				</div>
 
 				<div class="item">
-					<img src="./images/poza6.jpg"  style="width:100%;">
+					<img src="./images/poza6.JPG"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Primul Revelion impreuna</h2>
 					</div>
@@ -288,7 +288,7 @@
 				</div>
 
 				<div class="item">
-					<img src="./images/poza10.jpg"  style="width:100%;">
+					<img src="./images/poza10.JPG"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>In dreapta e bolidul!</h2>
 					</div>
@@ -316,7 +316,7 @@
 				</div>
 
 				<div class="item">
-					<img src="./images/poza14.jpg"  style="width:100%;">
+					<img src="./images/poza14.JPG"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>namol, piele fina</h2>
 					</div>
