--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
 		  height: 65px;
 		  margin:0px;
 		  position: relative;
-		  background-image:url(https://c2.glitch.bz/items/2012-12-06/npc_butterfly__x1_fly-angle2_png_1354829527.png);
+		  background-image:url(http://c2.glitch.bz/items/2012-12-06/npc_butterfly__x1_fly-angle2_png_1354829527.png);
 		  background-position: 0 0;
 		  background-repeat: no-repeat;
           z-index: 1000;
