cahnge photos location

--- a/home.html
+++ b/home.html
@@ -220,366 +220,366 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="./images/happy.jpg" style="width:100%;">
+					<img src="./happy.jpg" style="width:100%;">
 
 				</div>
 			
 				<div class="item">
-					<img src="./images/poza1.jpg" style="width:100%;">
+					<img src="./poza1.jpg" style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Acum 5 ani, aici a inceput totul...</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza2.jpg"  style="width:100%;">
+					<img src="./poza2.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Primul Craciun impreuna</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza3.jpg"  style="width:100%;">
+					<img src="./poza3.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Noi 2</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza4.jpg"  style="width:100%;">
+					<img src="./poza4.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Poarta sarutului</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza5.jpg"  style="width:100%;">
+					<img src="./poza5.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Plimbare in parc</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza6.JPG"  style="width:100%;">
+					<img src="./poza6.JPG"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Primul Revelion impreuna</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza7.jpg"  style="width:100%;">
+					<img src="./poza7.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Pe plaja, Costinesti</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza8.jpg"  style="width:100%;">
+					<img src="./poza8.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>liana...ahahahahhahahhaaa</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza9.jpg"  style="width:100%;">
+					<img src="./poza9.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>purple</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza10.JPG"  style="width:100%;">
+					<img src="./poza10.JPG"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>In dreapta e bolidul!</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza11.jpg"  style="width:100%;">
+					<img src="./poza11.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Noi doi si eu gol :))</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza12.jpg"  style="width:100%;">
+					<img src="./poza12.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>liana 2 ... ahahahhahahahhaaa</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza13.jpg"  style="width:100%;">
+					<img src="./poza13.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Alin, uite cum schiez!</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza14.JPG"  style="width:100%;">
+					<img src="./poza14.JPG"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>namol, piele fina</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza15.jpg"  style="width:100%;">
+					<img src="./poza15.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Alin, te ajut sa aprinzi lampionul!</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza16.jpg"  style="width:100%;">
+					<img src="./poza16.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>hmmmmm...</h2>
 					</div>
 				</div>
 
 				<!-- <div class="item"> -->
-					<!-- <img src="./images/poza17.jpg"  style="width:100%;"> -->
+					<!-- <img src="./poza17.jpg"  style="width:100%;"> -->
 				<!-- </div> -->
 
 				<div class="item">
-					<img src="./images/poza18.jpg"  style="width:100%;">
+					<img src="./poza18.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>relax</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza19.jpg"  style="width:100%;">
+					<img src="./poza19.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>two flowers</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza20.jpg"  style="width:100%;">
+					<img src="./poza20.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>party</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza21.jpg"  style="width:100%;">
+					<img src="./poza21.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>al doilea Revelion impreuna</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza22.jpg"  style="width:100%;">
+					<img src="./poza22.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>black</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza23.jpg"  style="width:100%;">
+					<img src="./poza23.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Cipilici</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza24.jpg"  style="width:100%;">
+					<img src="./poza24.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>valuri</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza25.jpg"  style="width:100%;">
+					<img src="./poza25.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>blue</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza26.jpg"  style="width:100%;">
+					<img src="./poza26.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Vreau si eu in poza!</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza27.jpg"  style="width:100%;">
+					<img src="./poza27.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>sand ... beach... relaxing time</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza28.jpg"  style="width:100%;">
+					<img src="./poza28.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>window</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza29.jpg"  style="width:100%;">
+					<img src="./poza29.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>liana 3 aahahahhahha...</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza30.jpg"  style="width:100%;">
+					<img src="./poza30.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>you drive me crazy!</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza31.jpg"  style="width:100%;">
+					<img src="./poza31.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>rocks</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza32.jpg"  style="width:100%;">
+					<img src="./poza32.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>dark blue</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza33.jpg"  style="width:100%;">
+					<img src="./poza33.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Colgate</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza34.jpg"  style="width:100%;">
+					<img src="./poza34.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>flower power</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza35.jpg"  style="width:100%;">
+					<img src="./poza35.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Colgate 2</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza36.jpg"  style="width:100%;">
+					<img src="./poza36.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>la muzeu</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza37.jpg"  style="width:100%;">
+					<img src="./poza37.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>pe turela :></h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza38.jpg"  style="width:100%;">
+					<img src="./poza38.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Mr. Snow</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza39.jpg"  style="width:100%;">
+					<img src="./poza39.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>river</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza40.jpg"  style="width:100%;">
+					<img src="./poza40.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>:*</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza41.jpg"  style="width:100%;">
+					<img src="./poza41.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>no comment</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza42.jpg"  style="width:100%;">
+					<img src="./poza42.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>together</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza43.jpg"  style="width:100%;">
+					<img src="./poza43.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>The Godfather</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza44.jpg"  style="width:100%;">
+					<img src="./poza44.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Farming...</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza45.jpg"  style="width:100%;">
+					<img src="./poza45.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Mai incet cu condusul pana nu ne rasturnam!</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza46.jpg"  style="width:100%;">
+					<img src="./poza46.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>awesome</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza47.jpg"  style="width:100%;">
+					<img src="./poza47.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>fresh</h2>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="./images/poza48.jpg"  style="width:100%;">
+					<img src="./poza48.jpg"  style="width:100%;">
 					<div class="carousel-caption">
 						<h2>Regarde la balle, n'est-ce pas la balle, où est la balle?</h2>
 					</div>
 				</div>
 
                 <div class="item">
-                    <img src="./images/poza49.jpg"  style="width:100%;">
+                    <img src="./poza49.jpg"  style="width:100%;">
                     <div class="carousel-caption">
                         <h2>Monilisa</h2>
                     </div>
                 </div>
 
                 <div class="item">
-                    <img src="./images/poza50.jpg"  style="width:100%;">
+                    <img src="./poza50.jpg"  style="width:100%;">
                     <div class="carousel-caption">
                         <h2>The King & The Queen</h2>
                     </div>
                 </div>
 
                 <div class="item">
-                    <img src="./images/poza51.jpg"  style="width:100%;">
+                    <img src="./poza51.jpg"  style="width:100%;">
                     <div class="carousel-caption">
                         <h2>To be continued...</h2>
                     </div>
                 </div>
 
                 <div class="item">
-                    <img src="./images/giphy.gif"  style="width:100%;">                  
+                    <img src="./giphy.gif"  style="width:100%;">                  
                 </div>
 
 			</div>
