--- a/home.html
+++ b/home.html
@@ -532,7 +532,7 @@
 				<div class="item">
 					<img src="./poza45.jpg"  style="width:100%;">
 					<div class="carousel-caption">
-						<h2>Mai incet cu condusul pana nu ne rasturnam!</h2>
+						<h2>Mai incet cu condusul sa nu ne rasturnam!</h2>
 					</div>
 				</div>
 
